2005-03-20  Christian Kellner <gicmo@gnome.org>

	* configure.in: Add -Wno-pointer-sign if available. This will stop
	the gcc4 warnings about char * vs unsigned char * for now. It's not
	100% optimal but even the linux kernel uses it at the moment!
	* modules/http-proxy.c: Correct the logic to actually handle netmaks
	right!
	* modules/sftp-method.c: Initialize save_password. This is not really
	necessary here but it will keep gcc4 quiet.

2005-03-14  Kjartan Maraas  <kmaraas@gnome.org>

	* modules/http-neon-method.c: (http_get_file_info), (http_options),
	(do_create), (do_close), (do_make_directory), (do_move): Don't leak
	quite as many requests. Bug #16826, still one that needs attention.

2005-03-07  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump.

=== gnome-vfs 2.10.0 ===

2005-03-07  Alexander Larsson  <alexl@redhat.com>

	* configure.in: 
	* NEWS:
	Update for 2.10.0 release

2005-03-03  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump.

=== gnome-vfs 2.9.93 ===

2005-03-03  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2005-03-02  Nate Nielsen <nielsen@memberwebs.com>

        * modules/smb-method.c: (perform_authentication, auth_callback)
        Fix problems when not on a domain and browsing smb://, or 
        anonymous shares. Fixes bug #168864 and bug #167020. 
        Approval for code freeze breakage by luis and kmaraas

2005-03-01  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release bump.

=== gnome-vfs 2.9.92 ===

2005-03-01  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2005-02-24  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c (gnome_vfs_mime_get_description):
	Special case folders to get the right description.

2005-02-23  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-utils.c (gnome_vfs_read_entire_file):